# DataPipelinePackage

./: .gitignore  CLAUDE.md  MANIFEST.in  README.md  config.ini  pipelineDevEnv.yml  pyproject.toml  requirements.txt  setup.cfg  test_config.ini
.claude/: settings.local.json
.github/workflows/: python-publish.yml
Configuration/: config.ini
docs/: conf.py  ecopipeline.rst  index.rst  modules.rst
docs/event_tracking/: event_tracking.rst
input/: DCA632A85F95_20230101100000.json  Variable_Names.csv  adjustments.csv  csv_test.csv  ecotope_wide_data.csv  ecotope_wide_data_original.csv  loadshift_matrix.csv  sample_data.json  test_Matrix.csv  vars_test.csv
output/: .727935-24234.csv.icloud  .isd-history.csv.icloud  1_11_23.csv  isd-history.csv  power_energy_conflicts.csv  processed.rda  processed_data.csv
src/docs/: config.ini
src/ecopipeline/: __init__.py  bayview.py  extract.py  lbnl.py  load.py  transform.py
src/ecopipeline/event_tracking/: Alarm.py  __init__.py  event_tracking.py
src/ecopipeline/extract/: APIExtractor.py  FileProcessor.py  __init__.py  extract.py  zip_to_lat_long.csv
src/ecopipeline/load/: AlarmLoader.py  Loader.py  __init__.py  load.py
src/ecopipeline/transform/: __init__.py  bayview.py  transform.py
src/ecotope_package_cs2306/: __init__.py  bayview.py  calculate_cop.py  config.ini  config.py  ecotope_data.csv  extract.py  gal120.py  lbnl.py  load.py  test.py  transform.py  unit_convert.py
testing/Bayview/load/: load_t.py  (+2 more)
tests/: central_functions_test.py  event_tracking_test.py  extract_test.py  load_test.py  transform_test.py
(+88 files in other folders)
